fix button download

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-    <div class="download-out" id="downloadOut">
+    <div class="download-out">
         <p>Gayuh Ridho (Resume).pdf</p>
-        <i class='bx bx-download'></i>
+        <button id="downloadOut">
+            <i class='bx bx-download'></i>
+        </button>
     </div>
 
     <div class="main" id="main">
