--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
-    <div class="download-out">
+    <div class="download-mobile">
+        <a href="https://gayuhridho.netlify.com" class="home"><i class='bx bxs-home'></i></a>
         <p>Gayuh Ridho (Resume).pdf</p>
-        <button id="downloadOut">
+        <button id="downloadMobile">
             <i class='bx bx-download'></i>
         </button>
     </div>
