--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="icon">
                             <i class='bx bx-world'></i>
                         </div>
-                        <p>gayuhridho.netlify.com</p>
+                        <p>gayuhridho.netlify.app</p>
                     </div>
                 </div>
             </section>
