--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="icon">
                             <i class='bx bxs-map-pin'></i>
                         </div>
-                        <p>Yogyakarta, Indonesia</p>
+                        <p>Jakarta, Indonesia</p>
                     </div>
                 </div>
             </section>
@@ -96,13 +96,14 @@
                     <span>JavaScript</span>
                     <span>Sass</span>
                     <span>Tailwind CSS</span>
-                    <span>Bootstrap</span>
-                    <span>jQuery</span>
                     <span>ReactJS</span>
+                    <span>NextJS</span>
+                    <span>NodeJS</span>
                     <span>React Router</span>
-                    <span>Redux</span>
-                    <span>Styled Components</span>
+                    <span>React Query</span>
                     <span>CSS Modules</span>
+                    <span>Styled Components</span>
+                    <span>Emotion</span>
                     <span>Jest</span>
                     <span>RTL</span>
                     <span>Git</span>
@@ -156,19 +157,19 @@
 
             <section class="experience">
                 <div class="title">Experience</div>
-                <div class="content">
+                 <div class="content">
                     <div class="timeline">
                         <span class="rounded"></span>
                         <span class="line"></span>
                     </div>
                     <div class="data">
-                        <div class="experience-position">Web Developer <span>(April 2021 - Present)</span></div>
-                        <div class="experience-unit">Pusat Teknologi Informasi dan Pangkalan Data (PTIPD)</div>
-                        <div class="experience-company">Universitas Islam Negeri Sunan Kalijaga Yogyakarta</div>
-                        <div class="experience-description">Build and develop a web-based information system to help
-                            simplify the work of units at the university, such as 'Sistem Informasi Alumni', 'Sistem
-                            Konsultasi Karir', 'Sistem Penelitian, Publikasi dan Pengabdian', 'Sistem Informasi
-                            Akademik'</div>
+                        <div class="experience-position">Software Engineer - Web Platform <span>(July 2022 - Present)</span>
+                        </div>
+                        <div class="experience-unit">IT Enterprise (Tribe)</div>
+                        <div class="experience-company">Tokopedia - Goto Company</div>
+                        <div class="experience-description">As a web platform engineer, I have a duty to implement the design 
+                            and requirements given by the product team, so that it can become a web application. And also 
+                            implementing clean code, modular code and implementing unit testing.</div>
                     </div>
                 </div>
                 <div class="content">
@@ -177,14 +178,13 @@
                         <span class="line"></span>
                     </div>
                     <div class="data">
-                        <div class="experience-position">Asistant Lecturer <span>(January 2017 - December 2017)</span>
-                        </div>
-                        <div class="experience-unit">Program Studi Teknik Informatika (TIF)</div>
+                        <div class="experience-position">Web Developer <span>(April 2021 - July 2022)</span></div>
+                        <div class="experience-unit">Pusat Teknologi Informasi dan Pangkalan Data (PTIPD)</div>
                         <div class="experience-company">Universitas Islam Negeri Sunan Kalijaga Yogyakarta</div>
-                        <div class="experience-description">Provide material and assist students in practicum classes,
-                            ensure that each student can write code properly and correctly, give assignments and assess
-                            each student's coding ability. There are 2 courses that I handle 'Algoritma dan
-                            Pemrograman', 'Struktur Data'</div>
+                        <div class="experience-description">Build and develop a web-based information system to help
+                            simplify the work of units at the university, such as 'Sistem Informasi Alumni', 'Sistem
+                            Konsultasi Karir', 'Sistem Penelitian, Publikasi dan Pengabdian', 'Sistem Informasi
+                            Akademik'</div>
                     </div>
                 </div>
             </section>
