--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                     <span>React Router</span>
                     <span>React Query</span>
                     <span>CSS Modules</span>
-                    <span>Styled Components</span>
                     <span>Emotion</span>
                     <span>Jest</span>
                     <span>RTL</span>
@@ -123,7 +122,7 @@
                     About
                 </div>
                 <div class="content">
-                    A Web Developer who specializes in Front-End from Yogyakarta city. I really like technology for
+                    A Web Developer who specializes in Front-End from Jakarta city. I really like technology for
                     develop the web apps, such as HTML, CSS, JavaScript and ReactJS ecosystems. For me, mastering the
                     basics is the key to being a great programmer.
                 </div>
